Added main menu, Addbook nefunguje